// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sibling sync reporter correctly generates report 1`] = `
"maticzav/label-sync
This is an autogenerated report for your project.
(dry run: "false")


Hey ✌️ we synced issues in your repository. Check the changes we made:

Another Issue Title
Issue number: 5

Added basic, kind/bug.

We used this manifest:
{
  "bug/no-reproduction": {
    "label": {
      "color": "f266f4",
      "default": false,
      "description": "",
      "name": "bug/no-reproduction"
    },
    "siblings": [
      "kind/bug",
      "good-first-issue"
    ]
  },
  "kind/bug": {
    "label": {
      "color": "333333",
      "default": false,
      "description": "",
      "name": "kind/bug"
    },
    "siblings": [
      "bug/no-reproduction"
    ]
  },
  "good-first-issue": {
    "label": {
      "color": "333333",
      "default": false,
      "description": "",
      "name": "good-first-issue"
    },
    "siblings": []
  }
}"
`;

exports[`sibling sync reporter generates correct empty report 1`] = `
"maticzav/label-sync
This is an autogenerated report for your project.
(dry run: "true")


Hey ✌️ we synced issues in your repository. Check the changes we made:



We used this manifest:
{
  "bug/no-reproduction": {
    "label": {
      "color": "f266f4",
      "default": false,
      "description": "",
      "name": "bug/no-reproduction"
    },
    "siblings": [
      "kind/bug",
      "good-first-issue"
    ]
  },
  "kind/bug": {
    "label": {
      "color": "333333",
      "default": false,
      "description": "",
      "name": "kind/bug"
    },
    "siblings": [
      "bug/no-reproduction"
    ]
  },
  "good-first-issue": {
    "label": {
      "color": "333333",
      "default": false,
      "description": "",
      "name": "good-first-issue"
    },
    "siblings": []
  }
}"
`;
